--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -7,5 +7,6 @@
         <h1>Topic Title</h1>
         <p>Delete this text and replace it with your own content.</p>
         <p>this is a change</p>
+        <p>this is another change</p>
     </body>
 </html>
